--- a/style.css
+++ b/style.css
@@ -25,9 +25,12 @@ form{
 
 form input,
 form button{
+  margin: 0.2rem;
+  position: relative;
   padding: 0.5rem;
   font-size: 2rem;
   border: none;
+  border-radius: 10px;
   background: white;
   transition: all 0.5s ease;
 }
@@ -64,7 +67,7 @@ form button:hover{
   display: flex;
   justify-content: space-between;
   align-items: center;
-  transition: all 0.3s ease;
+  transition: all 0.5s ease;
 }
 
 .todo li{
@@ -94,6 +97,61 @@ form button:hover{
 
 .todo-item{
   padding: 0rem 0.5rem;
+}
+
+.fa-trash,
+.fa-check{
+  pointer-events: none;
+}
+
+.completed{
+  text-decoration: line-through;
+  opacity: 0.5;
+}
+
+.fall{
+  transform: translateY(8rem) rotateZ(20deg);
+  opacity: 0;
+}
+
+select{
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  outline: none;
+  border: none;
+}
+
+.select{
+  margin: 1rem;
+  position: relative;
+  overflow: hidden;
+  border-radius: 10px;
+}
+
+select{
+  color: #00c2e4;
+  width: 10rem;
+  cursor: pointer;
+  padding: 1rem;
+}
+
+.select::after{
+  content: "\25BC";
+  position: absolute;
+  background: #00c2e4;
+  top: 0;
+  right: 0;
+  padding: 0.75rem;
+  pointer-events: none;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+
+.select:hover::after{
+  background: white;
+  color: #60f4ff;
+  transition: all 0.3s;
 }
 
 
